# Uni

./: .gitignore  .gitmodules  README.md
CALC/asses/: ass4.xopp  ass5.xopp  ass8.tex
CALC/notes/: cheat.tex  cheat2.tex  notes.tex
COMP/: IS Chapter 7.ppt
DATA/ass/: ass1.tex  ass2.tex
DATA/formula/: cheat.tex  cheat2.tex
DATA/minitab/: Minitab.lic
DATA/notes/: note.tex
DATA/prelab/: wk1.docx  wk1.mpx  wk2.mpx
DOA/: doa.tex
DOA/ass1/: .gitignore  CMakeLists.txt  TODO.md  convexHull.c  convexHull.h  linkedList.c  linkedList.h  problem.c  problem.h  problem1a.c  problem1b.c  stack.c  stack.h  test.c  test.h
DOA/ass1b/: .gitignore  CMakeLists.txt  graph.c  graph.h  list.c  list.h  pq.c  pq.h  problem2a.c  problem2b.c  problem2c.c  problem2d.c  readme.md  utils.c  utils.h
DOA/ass1b/generator/: .gitignore  generator.py
FNCE/ass1/: fass1.tex
FNCE/ass2/: analysis.xlsx  fass2.tex  ref.bib
FNCE/hw/: eb2.xopp
FOA/: ass1.c  main.cpp  test.c
FOA/ass1/: CMakeLists.txt  ass1.c  main.c  rules.txt  test.py
FOA/ass2/: .gitignore  lib.h  main.c  memcheck.sh  test.c
MAST/hw/: lec4.xopp  lec5.xopp  lec6.xopp  lec7.xopp  lec8.xopp  lec9.xopp
MAST/lecturenotes/: lec1.tex  lec2.tex  notes.tex
PFNCE/ass1/: analysis.xlsx  ass1.tex
PFNCE/notes/: wk9.html  wk9.md
SCNE/expert/: expert.bib  expert.tex
TIME/: sems2.xlsx
UniDB/: db.tex  dbnotes.tex
UniPROB/: cheat.tex  prob.tex
UniSTAT/: stats.tex
ai/: ai.tex
cs/: cs.tex
decl/: decl.tex
graphics/: graphics.tex
itproject/: it.tex
ml/: ml.tex
moc/: moc.tex
oop/: oop.tex
(+79 files in other folders)
